Updated readme, overflow bug, added screenshot.
New Readme.md changed from the default Readme.md template.

Fixed demo.css overflow-y. which prevented scrolling when embedded
or floating menus did not fit on screen.

Added a screenshot for Readme.md for light and dark mode theme.

--- a/public/css/demo.css
+++ b/public/css/demo.css
@@ -25,10 +25,16 @@ body {
 
 html, body, #dndmenu, #my-panel {
     overflow-x: hidden;
-    overflow-y: hidden; /* disabled temporarily for debugging window */
+    /* overflow-y: hidden; */  /* disabled temporarily for debugging window */
     height: 100%;
     width: 100%;
 }
+
+html::-webkit-scrollbar, body::-webkit-scrollbar, #dndmenu::-webkit-scrollbar, #my-panel::-webkit-scrollbar {
+   display: none;
+ 
+}
+
 
 a:link, a:visited, a:link:active, a:visited:active {
   color: white;
